--- a/my_flask_app/templates/index.html
+++ b/my_flask_app/templates/index.html
@@ -41,12 +41,9 @@
 <body class="bg-gray-200 p-4">
 
     <div class="flex">
-        <div class="sidebar">
-
-        <a href="/">Home</a>
-        <a href="/invoice">Invoice</a>
-        <a href="/receipt">Receipt</a>
-    </div>
+            <div class="sidebar">
+                {% include 'tabs.html' %}
+            </div>
     
         
         <div class="content flex-1">
