--- a/my_flask_app/templates/tabs.html
+++ b/my_flask_app/templates/tabs.html
@@ -3,6 +3,6 @@
 
 <a href="/sales-and-collection">Sales and Collection</a>
 
-<a href="/">Purchasing</a>
+<a href="/purchasing">Purchasing</a>
 
-<a href="/">Disbursement</a>
+<a href="/disbursement">Disbursement</a>
