--- a/my_flask_app/templates/Disbursement.html
+++ b/my_flask_app/templates/Disbursement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sales and Collection</title>
+    <title>Disbursement</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .content {
@@ -67,21 +67,22 @@
         </div>
 
         <div class="sidebar">
-            <h1 class="text-lg font-bold">Sales and Collection</h1>
+            <h1 class="text-lg font-bold">Disbursement</h1>
             <div class="mt-4">
-                <a onclick="showTab('invoiceTab')" >Invoice</a>
-                <a onclick="showTab('receiptTab')" >Receipt</a>
-
+                <a onclick="showTab('Request')" >Request Payment</a>
+                <a onclick="showTab('Issuance')" >Check Issuance</a>
+                <a onclick="showTab('Clearing')" >Check Clearing</a>
             </div>
         </div>
         <div class="content flex-1">
-            <div id="invoiceTab" class="tab active">
-                <h2 class="text-md font-semibold mb-4">Invoice</h2>
-                {% include 'InvoiceForm.html' %}
+            <div id="Request" class="tab active">
+                <h2 class="text-md font-semibold mb-4">Request Payment</h2>
             </div>
-            <div id="receiptTab" class="tab">
-                <h2 class="text-md font-semibold mb-4">Receipt</h2>
-                {% include 'InvoiceReceipt.html' %}
+            <div id="Issuance" class="tab">
+                <h2 class="text-md font-semibold mb-4">Check Issuance</h2>
+            </div>
+            <div id="Clearing" class="tab">
+                <h2 class="text-md font-semibold mb-4">Check Clearing</h2>
             </div>
         </div>
     </div>
