--- a/my_flask_app/templates/PurchaseOrder.html
+++ b/my_flask_app/templates/PurchaseOrder.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purchase Requests</title>
+    <title>Purchase Order</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-200 p-4">
