--- a/my_flask_app/templates/Purchasing.html
+++ b/my_flask_app/templates/Purchasing.html
@@ -85,6 +85,7 @@
             </div>
             <div id="Receiving" class="tab">
                 <h2 class="text-md font-semibold mb-4">Receiving Report</h2>
+                {% include 'PurchaseReceiving.html' %}
             </div>
         </div>
     </div>
