Frontend final goods

--- a/my_flask_app/templates/Disbursement.html
+++ b/my_flask_app/templates/Disbursement.html
@@ -81,6 +81,7 @@
             </div>
             <div id="Issuance" class="tab">
                 <h2 class="text-md font-semibold mb-4">Check Issuance</h2>
+                {% include 'CheckIssuance.html' %}
             </div>
             <div id="Clearing" class="tab">
                 <h2 class="text-md font-semibold mb-4">Check Clearing</h2>
